@@ -10,9 +10,8 @@ if (allocated(A)) stop
 if (any (lcobound(A) /= [1, -5])) call abort ()
 if (num_images() == 1) then
   if (any (ucobound(A) /= [4, -5])) call abort ()
-! FIXME: Tree walk issue
-!else
-!  if (ucobound(A,dim=1) /= 4) call abort ()
+else
+  if (ucobound(A,dim=1) /= 4) call abort ()
 end if
 if (allocated(A)) i = 5
 call s(A)
